registration added (w/a bug that says registration failed even though it didn't

--- a/Form application frontend/form-app/src/index.css
+++ b/Form application frontend/form-app/src/index.css
@@ -38,6 +38,9 @@ h1 {
   color: hsl(0, 8%, 20%);
   text-align: center;
 }
+.form-button {
+  margin-top: 15px;
+}
 
 button {
   border-radius: 8px;
